--- a/style.css
+++ b/style.css
@@ -1,54 +1,59 @@
-body {
-    background-color: #0CA7D3;
+.window {
+    width: 1000px;
+    height: 600px;
+    border: 5px solid black;
+    margin: 0 auto;
+    position: relative;
+    top: 20px;
+}
+
+.header {
+    position: relative;
+    width: 100%;
+    height: 10%;
+    border: 5 px solid purple;
+}
+
+.contents {
+    position: relative;
+    width: 100%;
+    height: 90%;
+    border: 1px solid green;
 }
 
 .box {
-    width: 500px;
-    height: 400px;
-    background-color: #044C62;
-    padding: 20px;
-    margin: 0 auto;
-    overflow: auto;
-    border-radius: 10px;
-}
-
-.helpbox {
-    width: 200px;
-    height: 160px;
-    background-color: #0A99C3;
-    padding: 20px;
-    margin: 0 auto;
-    position: fixed;
-    top: 120px;
-    right: 10px;
-}
-
-input {
-    width: 515px;
-    padding: 10px;
-    margin: 50px auto 20px auto;
-    display: block;
-    font-size: 14px;
-    font-family: Consolas;
-    background-color: #ecf0f1;
-}
-
-h1 {
-    font-size: 18px;
-    font-family: Consolas;
-    color: #333;
+    width: 120px;
+    height: 110px;
+    display: inline-block;
+    margin: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid red;
 }
 
 .box p {
+    text-align: center;
+    margin-top: 120px;
     font-size: 16px;
     font-family: Consolas;
-    color: white;
-    margin: 0;
 }
 
-.helpbox p {
+.bar {
+    height: 30px;
+    margin: 10px;
     font-size: 14px;
     font-family: Consolas;
-    color: white;
-    margin: 0;
+}
+
+input[name="address-bar"] {
+    width: 600px;
+}
+
+input[name="search-bar"] {
+    width: 250px;
+}
+
+#new-button {
+    width: 80px;
+    height: 35px;
 }
