--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     border: 1px solid red;
 }
 
-.box p {
+p {
     text-align: center;
     margin-top: 120px;
     font-size: 16px;
@@ -126,4 +126,16 @@ input[name="file-title"] {
     font-family: Consolas;
     margin-top: 3px;
     vertical-align: top;
+}
+
+#exit-search-button {
+    position: absolute;
+    top: 80px;
+    right: 1px;
+    width: 100px;
+    height: 50px;
+    font-size: 12px;
+    font-family: Consolas;
+    display: none;
+    z-index: 1;
 }
